--- a/src/gui/test.pot
+++ b/src/gui/test.pot
@@ -1,7 +1,7 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# gui.cpp Strings file
+# Copyright (C) 2024 A-McD Technology LLC
+# This file is distributed under the same license as the "Companion, TheCube - CORE" package.
+# Andrew McDaniel <admin@companionthecube.com>, 2024.
 #
 #, fuzzy
 msgid ""
